5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1811_2563.log
== TEST (2019-06-06 18:57:59) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
soma=0
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>5 and ne<7):
			nm=nm+1
		print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:01:24) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>5 and ne<7):
			nm=nm+1
		print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:01:57) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>5 and ne<7):
			nm=nm+1
		print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- EXECUTION TIME:
1.29887
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
3
4
5
6
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
1
2
3
0
0
0
0
1
1
1
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
1
2
3
4
5
6
7
8
9
10
11
0
1
1
2
2
3
3
4
0
0
0
0
0
0
1
1
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
0
1
2
2
3
4
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:02:24) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>5 and ne<7):
			nm=nm+1
		print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:03:43) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>5 and ne<7):
			nm=nm+1
		print(size(notas)-nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:06:36) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>5 and ne<7):
			nm=nm+1
	print(nm)
		notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
File "XXXX", line 10
    notas=array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:06:51) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>5 and ne<7):
			nm=nm+1
	print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:07:17) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>=5 and ne<7):
			nm=nm+1
	print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:09:43) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>=5 and ne<7):
			nm=nm+1
	print(nm)
notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:10:00) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>=5 and ne<7):
			nm=nm+1
	print(nm)
notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:12:33) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>=5 and ne<7):
			nm=nm+1
	print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:19:48) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>ne):
	nm=0
	for ne in notas:
		if (ne>=5 and ne<7):
			nm=nm+1
	print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:24:06) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>1):
	nm=0
	for ne in notas:
		if (ne>=5 and ne<7):
			nm=nm+1
	print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:24:40) 
-- CODE:
from numpy import *
notas=array(eval(input("nota dos vagabundo: ")))
ne=0
while (size(notas)>1):
	nm=0
	for ne in notas:
		if (ne>=5 and ne<7):
			nm=nm+1
	print(nm)
	notas=array(eval(input("nota dos vagabundo: ")))
	
-- EXECUTION TIME:
1.11542
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
